--- a/seeds/projectData.json
+++ b/seeds/projectData.json
@@ -1,62 +1,14 @@
 [
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": "2000-01-01",
+        "end_date": "2023-06-01",
         "team_id": null
     },
     {
-        "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
-        "team_id": null
-    },
-    {
-        "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
-        "team_id": null
-    },
-    {
-        "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
-        "team_id": null
-    },
-    {
-        "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
-        "team_id": null
-    },
-    {
-        "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
-        "team_id": null
-    },
-    {
-        "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
-        "team_id": null
-    },
-    {
-        "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
-        "team_id": null
-    },
-    {
-        "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
-        "team_id": null
-    },
-    {
-        "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "project_name": "Scorpio1",
+        "start_date": "2020-01-01",
+        "end_date": "2023-06-01",
         "team_id": null
     }
 ]
