--- a/seeds/projectData.json
+++ b/seeds/projectData.json
@@ -1,62 +1,62 @@
 [
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": null,
+        "deadline": null,
         "team_id": null
     },
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": null,
+        "deadline": null,
         "team_id": null
     },
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": null,
+        "deadline": null,
         "team_id": null
     },
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": null,
+        "deadline": null,
         "team_id": null
     },
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": null,
+        "deadline": null,
         "team_id": null
     },
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": null,
+        "deadline": null,
         "team_id": null
     },
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": null,
+        "deadline": null,
         "team_id": null
     },
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": null,
+        "deadline": null,
         "team_id": null
     },
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": null,
+        "deadline": null,
         "team_id": null
     },
     {
         "project_name": "Scorpio",
-        "start_date": "01/01/2000",
-        "deadline": "20/12/2023",
+        "start_date": null,
+        "deadline": null,
         "team_id": null
     }
 ]
