--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "begin": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -13,6 +14,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.3.5"
   }
 }
